\name{NEWS}
\title{NEWS file for the gCMAP}

\section{Changes in version 1.3.5}{
 \item{NEW}{DESeq package is now listed as 'Suggested' instead of 'Depends'}
}

\section{Changes in version 1.3.4}{
 \item{NEW}{Removed lattice and reshape dependencies.}
 \item{NEW}{Removed cmapQAPlot function.}
 \item{NEW}{Added generate_gCMAP_NChannelSet's 'report.center' parameter.}
}

\section{Changes in version 1.3.3}{
 \item{NEW}{Experimented with cmapQAPlot function (removed again in version 1.3.4).}
}

\section{Changes in version 1.3.2}{
 \item{NEW}{New mgsa_score method wrapping the model-based gene set analysis approach available in the mgsa package.}
}

\section{Changes in version 1.3.1}{
 \item{NEW}{New KEGG2cmap, reactome2cmap, wiki2cmap and go2cmap to functions to generate CMAPCollections from public annotation databases}
}

\section{Changes in version 1.3.1}{
 \item{NEW}{ New upIds and downIds methods for CMAPCollection objects.}
}

\section{Changes in version 1.3.0}{
  \itemize{
    \item{NEW}{ fisher_score method now accepts NChannelSets as 'sets' and thresholds a channel of choice on the fly.}
    \item{BUGFIX}{ induceCMAPCollection method was updated to fix a bug that prevented processing of certain single-sample eSets.}
    \item{NEW}{ New parameters 'center.z' and 'center.log_fc' for the generate_gCMAP_NChannelSet function, centering each column of the score matrix on the column mean, median or density peak. (Internally, the new 'center_eSet' function is called.)}
    \item{NEW}{ New function 'center_eSet' to center columns of eSet channels on either their kernel density peak, their mean or their median.}
    \item{NEW}{ New function mergeCMAPs to combined two eSets that share class, varLabels, annotation and assayDataElementNames.}
    \item{BUGFIX}{ Fixed missing gene names in featureScores method with CMAPCollections queries containing single-gene sets.}