@@ -1,8 +1,8 @@
 Package: gCMAP
 Type: Package
 Title: Tools for Connectivity Map-like analyses
-Version: 1.5.0
-Date: 2013-03-11
+Version: 1.5.1
+Date: 2013-07-20
 Depends: GSEABase, limma (>= 3.15.14)
 Imports: Biobase, BiocGenerics, methods, GSEAlm, Category, bigmemory, bigmemoryExtras (>=
         1.1.2), Matrix (>= 1.0.9), parallel, annotate, genefilter, AnnotationDbi
