@@ -1,6 +1,10 @@
 \name{NEWS}
 \title{NEWS file for the gCMAP}
 
+\section{Changes in version 1.5.1}{
+ \item{BUGFIX}{fixed incorrect varMetaData element definition in .process_counts}
+}
+
 \section{Changes in version 1.3.5}{
  \item{NEW}{DESeq package is now listed as 'Suggested' instead of 'Depends'}
 }
